--- a/konga/assets/js/app/plugins/comment-modal.html
+++ b/konga/assets/js/app/plugins/comment-modal.html
@@ -1,6 +1,6 @@
 <div class="modal-header primary">
   <h4 class="modal-title" id="modal-title">
-    Comment log
+    Change log
     <a class="modal-close pull-right" ng-click="close()">
       <i class="mdi mdi-close"></i>
     </a>
