--- a/konga/assets/js/app/plugins/openid-plugin.html
+++ b/konga/assets/js/app/plugins/openid-plugin.html
@@ -29,7 +29,7 @@
 
   }
 </style>
-<div class="row" ng-if="!loading || items.data.length">
+<div class="row">
   <div class="col-md-12">
     <div class="col-lg-12 col-md-8">
       <div ba-panel ba-panel-class="with-scroll">
