--- a/konga/assets/js/app/plugins/plugins.html
+++ b/konga/assets/js/app/plugins/plugins.html
@@ -66,7 +66,8 @@
             <raw-view data-item="item"></raw-view>
           </td>
           <th>
-            <a href ng-click="onEditPlugin(item)">{{item.name}}</a>
+            <span ng-if="['gluu-oauth-pep', 'gluu-uma-pep'].indexOf(item.name) >= 0">{{item.name}}</span>
+            <a href ng-if="['gluu-oauth-pep', 'gluu-uma-pep'].indexOf(item.name) == -1" ng-click="onEditPlugin(item)">{{item.name}}</a>
           </th>
           <td>{{::getContext(item)}}</td>
           <td>
