--- a/konga/assets/js/app/plugins/openid-plugin.html
+++ b/konga/assets/js/app/plugins/openid-plugin.html
@@ -353,7 +353,7 @@
                        type="checkbox" switch-size="small"
                        ng-model="pluginConfig.isPEPEnabled" class="form-control"/>
 
-                <span class="help-block error-block basic-block">Enable plugin first using above button to configure UMA PEP. It protect API paths by requiring specific UMA Scopes for certain methods. Click on <code>Add Path</code> button to start.</span>
+                <span class="help-block error-block basic-block">You need to enable above button to configure UMA PEP. It protect API paths by requiring specific UMA Scopes for certain methods. Click on <code>Add Path</code> button to start.</span>
               </div>
               <div class="row"></div>
               <div data-ng-show="pluginConfig.isPEPEnabled">
