#296: UI: Show level for acr values in OpenID Connect plugin

--- a/konga/assets/js/app/plugins/openid-plugin.html
+++ b/konga/assets/js/app/plugins/openid-plugin.html
@@ -109,8 +109,8 @@
                     <div class="checkbox">
                       <label class="custom-checkbox">
                         <input type="checkbox" id="acr_values_supported{{key}}"
-                               checklist-model="pluginConfig.required_acrs" checklist-value="value">
-                        <span style="font-weight: 600">{{value}}</span>
+                               checklist-model="pluginConfig.required_acrs" checklist-value="value.value">
+                        <span style="font-weight: 600">{{value.value}} (Level: {{value.level}})</span>
                       </label>
                     </div>
                   </div>
