#296: UI: Show UMA resource json for OpenID Connect plugin and UMA PEP

--- a/konga/assets/js/app/plugins/modals/show-uma-scope-json-modal.html
+++ b/konga/assets/js/app/plugins/modals/show-uma-scope-json-modal.html
@@ -1,7 +1,7 @@
 <div class="modal-content">
   <form novalidate>
     <div class="modal-body">
-      <pre>{{model.config.uma_scope_expression | json}}</pre>
+      <pre>{{uma_scope_expression | json}}</pre>
     </div>
     <div class="modal-footer">
       <button type="button" class="btn btn-default" ng-click="$dismiss()">Close</button>
