--- a/konga/assets/js/app/plugins/openid-plugin.html
+++ b/konga/assets/js/app/plugins/openid-plugin.html
@@ -348,6 +348,7 @@
                        ng-model="pluginConfig.isPEPEnabled" class="form-control"/>
 
                 <span class="help-block error-block basic-block">You need to enable above button to configure UMA PEP. It protect API paths by requiring specific UMA Scopes for certain methods. Click on <code>Add Path</code> button to start.</span>
+                <a ng-click="showPathPossibilities()" href>Possible Expression path</a>
               </div>
               <div class="row"></div>
               <div data-ng-show="pluginConfig.isPEPEnabled">
@@ -377,6 +378,7 @@
                                ng-required="true" required/>
                         <span
                           class="help-block error-block basic-block">The path which you want to have protected.</span>
+
                       </div>
                       <div class="col-md-12">
                         <div class="row" ng-repeat="cond in element.conditions">
