--- a/konga/assets/js/app/plugins/openid-plugin.html
+++ b/konga/assets/js/app/plugins/openid-plugin.html
@@ -348,7 +348,7 @@
                        ng-model="pluginConfig.isPEPEnabled" class="form-control"/>
 
                 <span class="help-block error-block basic-block">You need to enable above button to configure UMA PEP. It protect API paths by requiring specific UMA Scopes for certain methods. Click on <code>Add Path</code> button to start.</span>
-                <a ng-click="showPathPossibilities()" href>Possible Expression path</a>
+                <span>There is dynamic path facility. Click <a ng-click="showPathPossibilities()" href>here for possible dynamic path expressions</a></span>
               </div>
               <div class="row"></div>
               <div data-ng-show="pluginConfig.isPEPEnabled">
