#296: UI: Removed add scope textbox

--- a/konga/assets/js/app/plugins/openid-plugin.html
+++ b/konga/assets/js/app/plugins/openid-plugin.html
@@ -129,16 +129,16 @@
                     </div>
                   </div>
                 </div>
-                <label class="col-sm-2 control-label">Add Scope</label>
-                <div class="col-sm-5">
-                  <input type="text" ng-model="newScope"
-                         class="form-control">
-                </div>
-                <div class="col-sm-1">
-                  <button class="btn-sm btn-success" data-ng-click="addNewScope(newScope);newScope='';"
-                          title="Add">Add
-                  </button>
-                </div>
+                <!--<label class="col-sm-2 control-label">Add Scope</label>-->
+                <!--<div class="col-sm-5">-->
+                  <!--<input type="text" ng-model="newScope"-->
+                         <!--class="form-control">-->
+                <!--</div>-->
+                <!--<div class="col-sm-1">-->
+                  <!--<button class="btn-sm btn-success" data-ng-click="addNewScope(newScope);newScope='';"-->
+                          <!--title="Add">Add-->
+                  <!--</button>-->
+                <!--</div>-->
               </div>
               <!--<div class="form-group">-->
               <!--<label class="col-sm-2 control-label">Headers</label>-->
