GG UI: Updated the consumer add process - configure for jwt option

--- a/konga/assets/js/app/consumers/create-op-client-modal.html
+++ b/konga/assets/js/app/consumers/create-op-client-modal.html
@@ -86,7 +86,7 @@
       </div>
     </div>
 
-    <div class="form-group disabled">
+    <div class="form-group">
       <label class="col-sm-4 control-label">Access Token as JWT</label>
       <div class="col-sm-7 check-toggle-size">
         <input bs-switch ng-model="opClient.access_token_as_jwt"
@@ -98,7 +98,7 @@
       </div>
     </div>
 
-    <div class="form-group disabled">
+    <div class="form-group">
       <label class="col-sm-4 control-label">RPT as JWT</label>
       <div class="col-sm-7 check-toggle-size">
         <input bs-switch ng-model="opClient.rpt_as_jwt"
