GG UI: Show postgres db version

--- a/konga/assets/js/app/dashboard/dashboard.html
+++ b/konga/assets/js/app/dashboard/dashboard.html
@@ -169,7 +169,7 @@
         <table class="table no-margin">
           <tr>
             <th>DBMS</th>
-            <td>{{info.configuration.database}}</td>
+            <td>{{info.configuration.database}} - Version {{postgres_version}}</td>
           </tr>
           <tr>
             <th>Host</th>
