--- a/konga/assets/js/app/consumers/create-op-client-modal.html
+++ b/konga/assets/js/app/consumers/create-op-client-modal.html
@@ -120,6 +120,24 @@
     </div>
 
     <div class="form-group">
+      <label class="col-sm-4 control-label">Scope</label>
+      <div class="col-sm-7">
+        <chips ng-model="opClient.scope">
+          <chip-tmpl>
+            <div class="default-chip">
+              {{chip}}
+              <i class="mdi mdi-close" remove-chip></i>
+            </div>
+          </chip-tmpl>
+          <input chip-control/>
+        </chips>
+        <p class="help-block">
+          <code>uma_protection</code> is required in UMA(sgluu-uma-auth plugin) authentication case. Note: Press <code>Enter</code> to accept a value.
+        </p>
+      </div>
+    </div>
+
+    <div class="form-group">
       <div class="col-sm-offset-4 col-sm-7">
         <button type="submit" class="btn btn-primary btn-block">
           <i class="mdi mdi-check"></i>
