--- a/konga/assets/js/app/consumers/create-op-client-modal.html
+++ b/konga/assets/js/app/consumers/create-op-client-modal.html
@@ -132,7 +132,7 @@
           <input chip-control/>
         </chips>
         <p class="help-block">
-          <code>uma_protection</code> is required in UMA(sgluu-uma-auth plugin) authentication case. Note: Press <code>Enter</code> to accept a value.
+          <code>uma_protection</code> is required in UMA(gluu-uma-auth plugin) authentication case. Note: Press <code>Enter</code> to accept a value.
         </p>
       </div>
     </div>
