Remove configs settings for gluu-metrics plugin

--- a/konga/assets/js/app/plugins/plugins.html
+++ b/konga/assets/js/app/plugins/plugins.html
@@ -54,6 +54,7 @@
           <td ng-if="user.hasPermission($state.name.split('.')[0],'update')">
             <div class="check-toggle">
             <input
+              ng-if="!(item.name === 'ip-restriction' && item.service_id && item.service_id === gluuMetricsServiceId) && !(item.name === 'gluu-metrics' && !item.service_id && !item.route_id)"
               bs-switch
               switch-on-color="primary"
               ng-change="updatePlugin(item)"
@@ -66,13 +67,14 @@
             <raw-view data-item="item"></raw-view>
           </td>
           <th>
-            <span ng-if="['gluu-oauth-pep', 'gluu-uma-pep'].indexOf(item.name) >= 0">{{item.name}}</span>
-            <a href ng-if="['gluu-oauth-pep', 'gluu-uma-pep'].indexOf(item.name) == -1" ng-click="onEditPlugin(item)">{{item.name}}</a>
+            <span ng-if="['gluu-oauth-pep', 'gluu-uma-pep', 'gluu-metrics'].indexOf(item.name) >= 0 || (item.name === 'ip-restriction' && item.service_id && item.service_id === gluuMetricsServiceId)">{{item.name}}</span>
+            <a href ng-if="!(item.name === 'ip-restriction' && item.service_id && item.service_id === gluuMetricsServiceId) && ['gluu-oauth-pep', 'gluu-uma-pep', 'gluu-metrics'].indexOf(item.name) == -1" ng-click="onEditPlugin(item)">{{item.name}}</a>
           </th>
           <td>{{::getContext(item)}}</td>
           <td>
             <a data-ng-if="item.api_id" data-ui-sref="apis.edit({api_id:item.api_id})">{{item.api_id}}</a>
-            <a data-ng-if="item.service_id" data-ui-sref="services.edit({service_id:item.service_id})">{{item.service_id}}</a>
+            <a data-ng-if="item.service_id && !(item.name === 'ip-restriction' && item.service_id && item.service_id === gluuMetricsServiceId)" data-ui-sref="services.edit({service_id:item.service_id})">{{item.service_id}}</a>
+            <span data-ng-if="item.service_id && (item.name === 'ip-restriction' && item.service_id && item.service_id === gluuMetricsServiceId)" data-ui-sref="services.edit({service_id:item.service_id})">{{item.service_id}}</span>
             <a data-ng-if="item.route_id" data-ui-sref="routes.edit({route_id:item.route_id})">{{item.route_id}}</a>
             <span data-ng-if="!item.api_id && !item.service_id && !item.route_id" > All Entrypoints </span>
           </td>
@@ -94,7 +96,7 @@
               Delete
             </button>
 
-            <button data-ng-if="['gluu-oauth-auth', 'gluu-uma-auth', 'gluu-openid-connect'].indexOf(item.name) == -1" type="button" ng-click="deleteItem($index,item)" class="btn btn-danger btn-link">
+            <button data-ng-if="!(item.name === 'ip-restriction' && item.service_id && item.service_id === gluuMetricsServiceId) && ['gluu-oauth-auth', 'gluu-uma-auth', 'gluu-openid-connect', 'gluu-metrics'].indexOf(item.name) == -1" type="button" ng-click="deleteItem($index,item)" class="btn btn-danger btn-link">
               <i class="mdi mdi-delete"></i>
               Delete
             </button>
