Added regular expression facility for HttpMethod configuration for all the auth plugins #349

--- a/konga/assets/js/app/plugins/modals/path-possibilities-modal.html
+++ b/konga/assets/js/app/plugins/modals/path-possibilities-modal.html
@@ -17,6 +17,8 @@
       </ul>
       <br/>
       <b><code>Note: slash is required before multiple wildcards placeholder.</code> </b>
+      <br/><br/>
+      <b><code>Note: ? in HTTP method means allow all the http methods.</code> </b>
       <br/>
       <br/>
       <b>Examples: Assume that below all path is register in one plugin</b>
@@ -44,7 +46,7 @@
           </tr>
         </tbody>
       </table>
-      <b>Check <a href="https://gluu.org/docs/gg/" target="_blank">docs for more expression</a></b>
+      <b>Check <a href="https://gluu.org/docs/gg/plugin/common-features/#dynamic-resource-protection" target="_blank">docs for more expression</a></b>
     </div>
     <div class="modal-footer">
       <button type="button" class="btn btn-default" ng-click="$dismiss()">Close</button>
