--- a/konga/assets/js/app/plugins/uma-plugin.html
+++ b/konga/assets/js/app/plugins/uma-plugin.html
@@ -96,7 +96,7 @@
                         <div class="row">
                           <div class="col-md-10">
                             <div class="form-group has-feedback">
-                              <tags-input ng-model="cond.httpMethods"
+                              <tags-input min-length="1" ng-model="cond.httpMethods"
                                           id="httpMethods{{pIndex}}{{$index}}"
                                           add-from-autocomplete-only="true"
                                           placeholder="Enter HTTP methods" required>
@@ -130,7 +130,7 @@
                             <input type="hidden" value="{{cond['scopes' + pIndex + $index + '0']}}"
                                    name="hdScope{{pIndex}}{{$index}}0"/>
                             <div class="form-group has-feedback">
-                              <tags-input ng-model="cond['scopes' + pIndex + $index + '0']"
+                              <tags-input min-length="1" ng-model="cond['scopes' + pIndex + $index + '0']"
                                           name="scope{{pIndex}}{{$index}}0"
                                           id="scopes{{pIndex}}{{$index}}"
                                           placeholder="Enter scopes" required>
